--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 
   
 
-<ul class="nav navbar-nav">
+<ul class="nav navbar-nav ">
   <li>
     <a href="#">home</a>
   </li>
@@ -12,6 +12,41 @@
     <a routerLink="services">Services</a>
   </li>
 </ul>
+
+<!-- <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <a class="navbar-brand" href="#">Navbar w/ text</a>
+  <div class="collapse navbar-collapse" id="navbarText">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Features</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Pricing</a>
+      </li>
+    </ul>
+    <span class="navbar-text">
+      Navbar text with an inline element
+    </span>
+  </div>
+</nav> -->
+
+<!-- <ul class="nav navbar-nav hidden-md-up">
+  <li>
+    <a href="#">cucu</a>
+  </li>
+  <li>
+    <a routerLink="elements">rucu</a>
+  </li>
+  <li>
+    <a routerLink="services">Services</a>
+  </li>
+</ul> -->
 
 <router-outlet></router-outlet>
 
