--- a/src/app/pages/elements/elements.component.html
+++ b/src/app/pages/elements/elements.component.html
@@ -1,4 +1,3 @@
-<br><br>
 <div class="container-fluid">
 	<div class="row">
 
@@ -194,12 +193,253 @@
 				<label for="input5">Success</label>
 				<input type="text" id="input5" class="success" name="" placeholder="Default with hint">
 			</div>
-			<br>
 		</div>
-
 		<!-- END OF TEXTFIELD -->
 
 
+		<div class="col-lg-6">
+			<!-- DROPDOWNS -->
+			<div class="col-lg-12">
+			<br><br>
+				<h3>Dropdowns</h3>
+			</div>
+			<div class="btn-group" dropdown>
+			  <button dropdownToggle type="button" class="btn btn-primary dropdown-toggle">
+			    Button dropdown <span class="caret"></span>
+			  </button>
+			  <ul *dropdownMenu class="dropdown-menu" role="menu">
+			    <li role="menuitem"><a class="dropdown-item" href="#">Action</a></li>
+			    <li role="menuitem"><a class="dropdown-item" href="#">Another action</a></li>
+			    <li role="menuitem"><a class="dropdown-item" href="#">Something else here</a></li>
+			  </ul>
+			</div>
+			<!-- END OF DROPDOWNS -->
 
+
+			<!-- BREADCRUMBS -->
+			<div class="col-lg-12">
+			<br><br>
+				<h3>Breadcrumbs</h3>
+			</div>
+			<div>
+				<ol class="breadcrumb">
+				  <li><a href="#">Home</a></li>
+				  <li><a href="#">Library</a></li>
+				  <li class="active">Data</li>
+				</ol>
+			</div>
+			<div>
+				<ol class="breadcrumb type2">
+				  <li><a href="#">Home</a></li>
+				  <li><a href="#">Library</a></li>
+				  <li class="active">Data</li>
+				</ol>
+			</div>		
+			<!-- END OF BREADCRUMBS -->
+		</div>
+
+		<!-- TABS -->
+		<div class="col-lg-6">
+			<div class="col-lg-12">
+			<br><br>
+				<h3>TABS</h3>
+			</div>
+			<div>
+				<tabset>
+					<tab heading="Static content">Static content 1</tab>
+					<tab heading="Static Title 2">Static content 2</tab>
+					<tab heading="Static Title 3" removable="true">Static content 3</tab>
+					<tab>
+				      <template tabHeading>
+				        <div class="btn-group" dropdown>
+						  <button dropdownToggle type="button" class="btn btn-primary dropdown-toggle">
+						    Button dropdown <span class="caret"></span>
+						  </button>
+						  <ul *dropdownMenu class="dropdown-menu" role="menu">
+						    <li role="menuitem"><a class="dropdown-item" href="#">Action</a></li>
+						    <li role="menuitem"><a class="dropdown-item" href="#">Another action</a></li>
+						    <li role="menuitem"><a class="dropdown-item" href="#">Something else here</a></li>
+						  </ul>
+						</div>
+				      </template>
+				      I've got an HTML heading, and a select callback. Pretty cool!
+				    </tab>
+				</tabset>
+			</div>
+			<div>
+				<tabset class="type2">
+					<tab heading="Static content">Static content 1</tab>
+					<tab heading="Static Title 2">Static content 2</tab>
+				</tabset>
+			</div>
+		</div>
+		<!-- END OF TABS -->
+
+		<!-- ALERTS -->
+		<div class="col-lg-6">
+			<div class="col-lg-12">
+			<br><br>
+				<h3>ALERTS</h3>
+			</div>
+			<alert type="primary" dismissible="true">
+				<p><strong>Primary!</strong> This alert needs your attention, but it's not super important.</p>
+			</alert>			
+			<alert type="info" dismissible="true">
+				<p><strong>Info!</strong> This alert needs your attention, but it's not super important.</p>
+			</alert>
+			<alert type="success" dismissible="true">
+				<p><strong>Success!</strong> You successfully read this important alert message.</p>
+			</alert>
+			<alert type="warning" dismissible="true">
+				<p><strong>Warning!</strong> Better check yourself, you're not looking too good.</p>
+			</alert>
+			<alert type="danger" dismissible="true">
+				<p><strong>Error!</strong> Change a few things up and try submitting again.</p>
+			</alert>
+		</div>
+		<!-- END OF ALERTS -->
+
+
+		<!-- LABELS -->
+		<div class="col-lg-6">
+			<div class="col-lg-12">
+			<br><br>
+				<h3>Labels</h3>
+			</div>			
+			<div>
+				<span class="label label-default">Default</span>
+				<span class="label label-primary">Primary</span>
+				<span class="label label-success">Success</span>
+				<span class="label label-info">Info</span>
+				<span class="label label-warning">Warning</span>
+				<span class="label label-alert">Alert</span>
+				<span class="label label-danger">Danger</span>
+			</div>
+			<div>
+				<h1 class="bold">Example heading <span class="label label-default">New</span></h1>
+			</div>
+			<div>
+				<h2 class="bold">Example heading <span class="label label-default">New</span></h2>
+			</div>
+			<div>
+				<h3>Example heading <span class="label label-default">New</span></h3>
+			</div>
+			<div>
+				<h4>Example heading <span class="label label-default">New</span></h4>
+			</div>
+			<div>
+				<h5>Example heading <span class="label label-default">New</span></h5>
+			</div>
+		</div>
+		<!-- END OF LABELS -->
+
+		<!-- TABLES -->
+		<div class="col-lg-4">
+			<div class="col-lg-12">
+			<br><br>
+				<h3>Tables</h3>
+			</div>	
+			<div class="table-wrap">
+				<h3 class="table-title">Shiver me timbers!</h3>
+				<table>
+					<thead class="text">
+						<tr>
+							<td colspan="4">
+								<p>My name is Captain Kidd, as I sailed, as I sailed. Oh my name is Captain Kidd as I sailed. My name is Captain Kidd and God's laws I did forbid, and most wickedly I did as I sailed.</p>
+							</td>
+						</tr>
+					</thead>
+					<thead>
+						<tr>
+							<td>#</td>
+							<td>Ship Name</td>
+							<td>Captain</td>
+							<td>Status</td>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>1</td>
+							<td>Walrus</td>
+							<td>James Flint</td>
+							<td>Unknown</td>
+						</tr>
+						<tr>
+							<td>2</td>
+							<td>Royal Fortune</td>
+							<td>Black Bart </td>
+							<td>Destroyed</td>
+						</tr>
+						<tr>
+							<td>3</td>
+							<td>Ranger</td>
+							<td>Charles Vane</td>
+							<td>Captured</td>
+						</tr>
+						<tr>
+							<td>4</td>
+							<td>Walrus</td>
+							<td>James Flint</td>
+							<td>Unknown</td>
+						</tr>
+						<tr>
+							<td>5</td>
+							<td>Royal Fortune</td>
+							<td>Black Bart </td>
+							<td>Destroyed</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+			<div class="table-wrap">
+				<h3 class="table-title">Shiver me timbers!</h3>
+				<table>
+					<thead>
+						<tr>
+							<td>#</td>
+							<td>Ship Name</td>
+							<td>Captain</td>
+							<td>Status</td>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>1</td>
+							<td>Walrus</td>
+							<td>James Flint</td>
+							<td>Unknown</td>
+						</tr>
+						<tr>
+							<td>2</td>
+							<td>Royal Fortune</td>
+							<td>Black Bart </td>
+							<td>Destroyed</td>
+						</tr>
+						<tr>
+							<td>3</td>
+							<td>Ranger</td>
+							<td>Charles Vane</td>
+							<td>Captured</td>
+						</tr>
+						<tr>
+							<td>4</td>
+							<td>Walrus</td>
+							<td>James Flint</td>
+							<td>Unknown</td>
+						</tr>
+						<tr>
+							<td>5</td>
+							<td>Royal Fortune</td>
+							<td>Black Bart </td>
+							<td>Destroyed</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
+		<!-- END OF TABLES -->
+		<div class="col-lg-12"></div>
+
+		<div class="col-lg-12"></div>
 	</div>
 </div>
