--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -1,4 +1,9 @@
-<i class="fa fa-meetup" aria-hidden="true"></i>
+<a routerLink="../elements">Elements</a>
+
+
+<h2>this page will be the primary page</h2>
+
+<!-- <i class="fa fa-meetup" aria-hidden="true"></i>
 <i class="fa fa-binoculars" aria-hidden="true"></i>
 
 <div class="btn-group" dropdown>
@@ -34,4 +39,4 @@
   <accordion-group heading="Content 2">
     <p>Content 2</p>
   </accordion-group>
-</accordion>
+</accordion> -->
