--- a/src/styles.scss
+++ b/src/styles.scss
@@ -294,8 +294,7 @@ ul{
     &:focus:active{
       outline:none;
     }
-  }
-  
+  }  
 }
 
 
@@ -342,6 +341,10 @@ ul{
       background: $gray-go;
       border:medium none;
       color: $pink-go;
+      &:hover{
+        background:$gray-go;
+        color: $pink-go;
+      }
     }
     &.disabled {
       a{      
@@ -358,6 +361,10 @@ ul{
   }
 }
 
+hr{
+  margin:2rem 0;
+  opacity: .05;
+}
 /*FONTS*/
 
 h1{
@@ -783,6 +790,7 @@ label.social{
   position: relative;
   line-height:  2.4rem;
   border-radius:  .5rem;
+  margin-right: 5rem;
   span{
     position:absolute; 
     top:0;
@@ -988,7 +996,8 @@ label.social{
 /*END SORT BY*/
 
 /*EVENT LIST*/
-.event-list{
+.event-list,
+.musician-list{
   list-style: none;
   padding:0;
   margin:0;
@@ -1043,7 +1052,8 @@ label.social{
     margin-left: 1rem;  
   }
 }
-.event-where{
+.event-where,
+.musician-where{
   color: $pink-go;
   margin-bottom: 1rem;
   display: block;
@@ -1051,13 +1061,49 @@ label.social{
     margin-right: 1rem;
   }
 }
-.event-location{
+.event-location,
+.musician-origin{
   color: $blue-go;
   i{
     margin-right: 1rem;
   }
 }
 /*END EVENT LIST*/
+
+/*MUSICIAN LIST*/
+.musician-list{
+  .musician-imgage{
+    img{
+      width: 100%;
+      max-width: 100%;
+    }
+  }
+  h2{
+    margin-top:0;
+    margin-bottom: 4rem;
+  }
+  .musician-origin{
+    margin-bottom: 3rem;
+    display: block;
+  }
+  .hashtags{
+    word-spacing: 1rem;
+  }
+  .events-goo{
+    opacity: 1;
+    color: $white-go;
+    margin-bottom: 5rem;
+    span{
+      font-size: 1.4rem;
+    }
+  }
+  .socials{
+    label{
+     margin-right: 10rem;
+    }
+  }
+}
+/*END MUSICIAN LIST*/
 
 /*TRACK LIST*/
 .track-list{
@@ -1685,7 +1731,8 @@ min-height: 100vh;
 
 
 /*EVENT DETAILS PAGE*/
-.event-details{
+.event-details,
+.musician-details{
   .left{
     padding-left: 0;
   }
@@ -1717,10 +1764,81 @@ min-height: 100vh;
   }
 }
 /*END EVENT DETAILS PAGE*/
+/*MUSICIAN DETAILS*/
+.musician-details{
+  .tab-container.type2 {
+    width: 100%;
+    .nav-item{
+      width: 50%;
+      a{
+        font-size: 1.6rem;
+        line-height: 5rem;
+      }
+    }
+  }
+  .event-location{
+    display: block;
+    margin-bottom: 1rem;
+  }
+  .website-link{
+    color: $pink-go;
+    font-size: 1.8rem;
+    &:hover{
+      text-decoration:none;
+    }
+    &:focus{
+      outline:none;
+    }
+  }
+}
+.socials-links{
+  button{
+    background: none transparent;
+    border:medium none;
+    font-size: 2rem;
+    font-weight: 700;
+    vertical-align: middle;
+    line-height: 3.2rem;
+    padding:0;
+    margin:0 .5rem;
+    text-align: center;
+    i{
+      font-size: 3rem;
+      line-height: 3.2rem;
+      vertical-align: middle;
+      margin-right: 1rem;
+    }
+    &.soundcloud{
+      color: #f50;
+      font-size: .7rem;
+      line-height: .7rem;
+      i{
+        font-size: 4rem;
+        clear:both;
+        display: block;
+        line-height:3rem;
+        margin:0;
+      }
+    }
+    &.spotify{
+      color: #00d856;
+    }
+    &.twitter{
+      color: #00cdff;
+    }
+    &.facebook{
+      color: #3B5998;
+    }
 
 
+    &:focus{
+      outline:none;
+    }
+  }
+}
 
 
+/*END MUSICIAN DETAILS*/
 
 
 
